--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
 
-    <h1>Enter Your Message To Print</h1>
-    <div class="printMessage">
+    <div class="container">
+    <div id="printMessage">
             <input type="text" placeholder="Enter Your Message" id="inputText">
             <button id="buttonItem">Comment</button>
-        <span id="spanItem"></span>
+
+    </div>
+    <div id="Message" style="word-wrap: break-word;width: 100%;">
+
+    </div>
     </div>
     <script src="js/main.js"></script>
 </body>
